crates/uitest/fixtures/ty_check/unary.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/unary.fe
---
error[1-0001]: line-start `-` after an expression is ambiguous; move `-` to the previous line for subtraction or parenthesize explicitly
   ┌─ unary.fe:11:5
   │
11 │     -3
   │     ^ line-start `-` after an expression is ambiguous; move `-` to the previous line for subtraction or parenthesize explicitly

error[8-0016]: `core::ops::Neg` trait is not implemented
  ┌─ unary.fe:6:14
  │
6 │     let _y = -f
  │              ^^
  │              │
  │              `-` can't be applied to `Foo`
  │              Try implementing `core::ops::Neg` for `Foo`

error[8-0016]: `core::ops::Not` trait is not implemented
  ┌─ unary.fe:7:14
  │
7 │     let _z = !f
  │              ^^
  │              │
  │              `!` can't be applied to `Foo`
  │              Try implementing `core::ops::Not` for `Foo`

error[8-0031]: type annotation is needed
   ┌─ unary.fe:11:5
   │    
11 │ ╭ ╭     -3
12 │ │ │     *4
   │ ╰─│──────^ type annotation is needed
   │   ╰──────' no default type is provided for an integer type. consider giving integer type

error[8-0052]: unary `+` is not supported
  ┌─ unary.fe:5:14
  │
5 │     let _x = +f
  │              ^^ remove the unary `+`
